workspace = { members = ["engine"] }
[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = {path = "./engine/"}
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
opt-level = 3
strip = true
lto = true
