[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
noise = "0.8.2"
tokio = "1.35.1"
wgpu = "0.18.0"
winit = { version = "0.29.7", features = ["rwh_05"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]
